--- a/style.css
+++ b/style.css
@@ -15,8 +15,15 @@
       <div class="ratings-container">
         <div class="rating">
 
-
-
+        
+        <img
+        src="https://image.flaticon.com/icons/svg/187/187136.svg"
+        alt=""
+      />
+      <small>Neutral</small>
+    </div>
+    <div class="rating active">
+        <img
        
         </body>
         </html>
