--- a/style.css
+++ b/style.css
@@ -24,6 +24,16 @@
     </div>
     <div class="rating active">
         <img
-       
-        </body>
-        </html>
+        src="https://image.flaticon.com/icons/svg/187/187133.svg"
+        alt=""
+      />
+      <small>Satisfied</small>
+    </div>
+  </div>
+  <button class="btn" id="send">Send review</button>
+</div>
+</body>
+<script src="app.js"></script>
+</html>
+</body>
+</html>
